Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
All tests - dmesg-fail/dmesg-warn - *ERROR* GT workaround lost on application!, *ERROR* GT workaround lost on init!
6> [396.340451] [IGT] gem_ctx_persistence: starting dynamic subtest vcs0
<7> [396.347084] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [396.349256] i915 0000:00:02.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 2 created
<7> [396.378810] i915 0000:00:02.0: [drm:gen8_de_irq_handler [i915]] hotplug event received, stat 0x01000000, dig 0x0000000a, pins 0x00000040, long 0x00000040
<7> [396.378893] [drm:intel_hpd_irq_handler [i915]] Received HPD interrupt on PIN 6 - cnt: 20
<7> [396.573645] intel_gt_set_wedged called from i915_drop_caches_set+0x1d9/0x240 [i915]
<7> [396.573653] intel_gt_set_wedged vcs0
<7> [396.573657] intel_gt_set_wedged Awake? 2
<7> [396.573661] intel_gt_set_wedged Barriers?: yes
<7> [396.573665] intel_gt_set_wedged Latency: 145us
<7> [396.573669] intel_gt_set_wedged Reset count: 5 (global 2)
<7> [396.573673] intel_gt_set_wedged Requests:
<7> [396.573683] intel_gt_set_wedged active 12db:2*- prio=3 @ 223ms: [i915]
<7> [396.573688] intel_gt_set_wedged ring->start: 0x00009000
<7> [396.573691] intel_gt_set_wedged ring->head: 0x00000000
<7> [396.573694] intel_gt_set_wedged ring->tail: 0x00000068
<7> [396.573698] intel_gt_set_wedged ring->emit: 0x00000070
<7> [396.573701] intel_gt_set_wedged ring->space: 0x00003f50
<7> [396.573704] intel_gt_set_wedged ring->hwsp: 0xfffe2040
<7> [396.573708] intel_gt_set_wedged [head 0000, postfix 0040, tail 0070, batch 0x00000000_00040000]:
<7> [396.573729] intel_gt_set_wedged [0000] 13244082 000000d0 00000000 00000000 02800000 00000000 10400002 fffe2040
<7> [396.573734] intel_gt_set_wedged [0020] 00000000 00000001 04000001 18800101 00040000 00000000 04000000 00000000
<7> [396.573739] intel_gt_set_wedged [0040] 13004002 fffe2044 00000000 00000002 01000000 04000001 0e40c002 00000000
<7> [396.573743] intel_gt_set_wedged [0060] fffea0c8 00000000 02800000 00000000
<7> [396.573752] intel_gt_set_wedged Logical Ring Context:
<7> [396.573757] intel_gt_set_wedged [0000] 00000000 1108101b 001c0244 ffff0008 001c0034 00000038 001c0030 00000068
<7> [396.573761] intel_gt_set_wedged [0020] 001c0038 00009000 001c003c 00003001 001c0168 00000000 001c0140 00040045
<7> [396.573766] intel_gt_set_wedged [0040] 001c0110 00000020 001c011c 00000000 001c0114 00000000 001c0118 00000000
<7> [396.573770] intel_gt_set_wedged [0060] 001c01c0 00000000 001c01c4 00000000 001c01c8 00000000 00000000 00000000
<7> [396.573774] intel_gt_set_wedged [0080] 00000000 11081011 001c03a8 0001402b 001c028c 00000000 001c0288 00000000
<7> [396.573778] intel_gt_set_wedged [00a0] 001c0284 00000000 001c0280 00000000 001c027c 00000000 001c0278 00000000
<7> [396.573782] intel_gt_set_wedged [00c0] 001c0274 00000000 001c0270 e2033000 00000000 00000000 00000000 00000000
<7> [396.573786] intel_gt_set_wedged [00e0] 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.573789] intel_gt_set_wedged *
<7> [396.573794] intel_gt_set_wedged [0140] 00000000 11081057 001c0028 ffff0000 001c009c feff0000 001c00c0 ffff0000
<7> [396.573798] intel_gt_set_wedged [0160] 001c0178 00000001 001c017c 00145855 001c0358 d8429d2e 001c0170 00000000
<7> [396.573802] intel_gt_set_wedged [0180] 001c0150 00040040 001c0154 00000000 001c0158 00000005 001c041c 00000000
<7> [396.573806] intel_gt_set_wedged [01a0] 001c0600 00000000 001c0604 00000000 001c0608 00000000 001c060c 00000000
<7> [396.573811] intel_gt_set_wedged [01c0] 001c0610 00000000 001c0614 00000000 001c0618 00000000 001c061c 00000000
<7> [396.573815] intel_gt_set_wedged [01e0] 001c0620 00000000 001c0624 00000000 001c0628 00000000 001c062c 00000000
<7> [396.573819] intel_gt_set_wedged [0200] 001c0630 00000000 001c0634 00000000 001c0638 00000000 001c063c 00000000
<7> [396.573823] intel_gt_set_wedged [0220] 001c0640 00000000 001c0644 00000000 001c0648 00000000 001c064c 00000000
<7> [396.573827] intel_gt_set_wedged [0240] 001c0650 00000000 001c0654 00000000 001c0658 00000000 001c065c 00000000
<7> [396.573831] intel_gt_set_wedged [0260] 001c0660 00000000 001c0664 00000000 001c0668 00000000 001c066c 00000000
<7> [396.573835] intel_gt_set_wedged [0280] 001c0670 00000000 001c0674 00000000 001c0678 00000000 001c067c 00000000
<7> [396.573839] intel_gt_set_wedged [02a0] 001c0068 02800000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.573844] intel_gt_set_wedged [02c0] 05000001 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.573848] intel_gt_set_wedged [02e0] 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.573851] intel_gt_set_wedged *
<7> [396.573855] intel_gt_set_wedged On hold?: 0
<7> [396.573858] intel_gt_set_wedged MMIO base: 0x001c0000
<7> [396.573881] intel_gt_set_wedged RING_START: 0x00009000
<7> [396.573888] intel_gt_set_wedged RING_HEAD: 0x00000038
<7> [396.573895] intel_gt_set_wedged RING_TAIL: 0x00000068
<7> [396.573905] intel_gt_set_wedged RING_CTL: 0x00003001
<7> [396.573916] intel_gt_set_wedged RING_MODE: 0x00000000
<7> [396.573922] intel_gt_set_wedged RING_IMR: 0x00000000
<7> [396.573929] intel_gt_set_wedged RING_ESR: 0x00000000
<7> [396.573936] intel_gt_set_wedged RING_EMR: 0xfffffffe
<7> [396.573942] intel_gt_set_wedged RING_EIR: 0x00000000
<7> [396.573957] intel_gt_set_wedged ACTHD: 0x00000000_00040700
<7> [396.573971] intel_gt_set_wedged BBADDR: 0x00000000_00040b8d
<7> [396.573985] intel_gt_set_wedged DMA_FADDR: 0x00000000_00040240
<7> [396.573991] intel_gt_set_wedged IPEIR: 0x00000000
<7> [396.573998] intel_gt_set_wedged IPEHR: 0x18800101
<7> [396.574002] intel_gt_set_wedged Execlist tasklet queued? no (enabled), preempt? active, timeslice? expired
<7> [396.574013] intel_gt_set_wedged Execlist status: 0x00014198 20000000; CSB read:9, write:9, entries:12
<7> [396.574021] intel_gt_set_wedged Active[0]: ring:{start:00009000, hwsp:fffe2040, seqno:00000001}, rq: 12db:2*- prio=3 @ 223ms: [i915]
<7> [396.574030] intel_gt_set_wedged E 12db:2*- prio=3 @ 223ms: [i915]
<7> [396.574033] intel_gt_set_wedged HWSP:
<7> [396.574038] intel_gt_set_wedged [0000] 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.574041] intel_gt_set_wedged *
<7> [396.574046] intel_gt_set_wedged [0040] 00000001 20000000 00008002 20000020 00000002 20000020 00000002 20000040
<7> [396.574050] intel_gt_set_wedged [0060] 00000002 20000020 00000002 20000040 00000018 20000060 00000001 20000000
<7> [396.574055] intel_gt_set_wedged [0080] 00000002 20000000 00000014 20000020 00000018 20000000 00000001 20000000
<7> [396.574059] intel_gt_set_wedged [00a0] 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000009
<7> [396.574063] intel_gt_set_wedged [00c0] 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.574066] intel_gt_set_wedged *
<7> [396.574071] intel_gt_set_wedged [0100] 0000014a 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.574075] intel_gt_set_wedged [0120] 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [396.574078] intel_gt_set_wedged *
<7> [396.574083] intel_gt_set_wedged Idle? no
<7> [396.574086] intel_gt_set_wedged Signals:
<7> [396.574092] intel_gt_set_wedged [12db:2*] @ 223ms
<7> [396.575458] i915 0000:00:02.0: [drm:intel_gt_reset_global [i915]] resetting chip, engines=47
<3> [396.575942] [drm:wa_verify [i915]] *ERROR* GT workaround lost on application! (9524=0/0, expected 10000)
<3> [396.576137] [drm:wa_verify [i915]] *ERROR* GT workaround lost on init! (9524=0/0, expected 10000)
````